# tar

./: LICENSE  Lab4.ipynb  README.md  TAR_Ex_CliffWalk.ipynb  TAR_Lab_0_MC.ipynb  TAR_Lab_1_MC.ipynb  TAR_Lab_2_RL.ipynb  pyproject.toml  q_learning_2.py
Lab3/: TAR_Lab_3_gym.ipynb
