[project]
name = "tar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ffmpeg>=1.4",
    "gymnasium[box2d,other,toy-text]>=1.1.1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "pygame>=2.6.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "stable-baselines3>=2.6.0",
    "swig>=4.3.1",
    "tqdm>=4.67.1",
]
